--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ documentation = "https://docs.rs/st7735-lcd"
 
 [dependencies]
 embedded-hal = "1.0.0"
-nb = "1.1.0"
+embedded-hal-async = "1.0.0"
 
 [dependencies.embedded-graphics-core]
 version = "0.4"
